# server/static/api_swagger_docs.json
@@ -38,6 +38,188 @@
             "description": "ID not found"
           }
         }
+      },
+      "post": {
+        "tags": ["University"],
+        "summary": "Create an university",
+        "parameters": [
+          {
+            "name": "country_code",
+            "in": "query",
+            "description": "country code of university to create",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "maxLength": 3
+            }
+          },
+          {
+            "name": "region",
+            "in": "query",
+            "description": "Region of university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 40
+            }
+          },
+          {
+            "name": "long_name",
+            "in": "query",
+            "description": "Full name of university to create",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "maxLength": 255
+            }
+          },
+          {
+            "name": "campus",
+            "in": "query",
+            "description": "Campus of the university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 255
+            }
+          },
+          {
+            "name": "housing",
+            "in": "query",
+            "description": "Housing of the university to create",
+            "required": false,
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "info_page_id",
+            "in": "query",
+            "description": "Information of the university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 36
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Creation of user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UniversityMeta"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": ["University"],
+        "summary": "Update an university",
+        "parameters": [
+          {
+            "name": "country_code",
+            "in": "query",
+            "description": "country code of university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 3
+            }
+          },
+          {
+            "name": "region",
+            "in": "query",
+            "description": "Region of university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 40
+            }
+          },
+          {
+            "name": "long_name",
+            "in": "query",
+            "description": "Full name of university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 255
+            }
+          },
+          {
+            "name": "campus",
+            "in": "query",
+            "description": "Campus of the university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 255
+            }
+          },
+          {
+            "name": "housing",
+            "in": "query",
+            "description": "Housing of the university to create",
+            "required": false,
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "info_page_id",
+            "in": "query",
+            "description": "Information of the university to create",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "maxLength": 36
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UniversityMeta"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["University"],
+        "summary": "Delete a university",
+        "description": "Delete university with provided uni_id. \n",
+        "parameters": [
+          {
+            "name": "university_id",
+            "in": "query",
+            "description": "university id of the uni to delete",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "maxLength": 64
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Deletion of university"
+          }
+        }
       }
     },
     "/api/universities/{university_id}": {
